--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bootstrap": "^5.3.8",
     "gh-pages": "^6.3.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "sweetalert2": "^11.26.17",
+    "sweetalert2-react-content": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
